objects/Deal_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Global Business Unit</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <defaultValue>$User.FirstName</defaultValue>
        <label>Customer Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <formula>Submission_Date__c +  90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the L1 approvers are final approver</description>
        <label>Final Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Auto_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Approval_Owner__c</fullName>
        <label>Level 1 Approval Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registrations9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registrations12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_1_Approver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registrations13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_2_Approval_Deadline__c</fullName>
        <inlineHelpText>Deal Registration will be automatically approved if L2 approver does not take action by this date/time.</inlineHelpText>
        <label>Level 2 Approval Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master-detail relation with Opportunity object</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Partner_Account_Formula__c</fullName>
        <formula>Partner_User_Location__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registrations (Partner Account)</relationshipLabel>
        <relationshipName>Deal_Registrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_User_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locator ID</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductIds__c</fullName>
        <label>ProductIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Registration_Approved_count__c</fullName>
        <label>Product Registration Approved count</label>
        <summaryFilterItems>
            <field>Product_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Registration__c.Deal_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Registrations_Count__c</fullName>
        <label>Product Registrations Count</label>
        <summaryFilterItems>
            <field>Product_Registration__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Approved, Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Registration__c.Deal_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program_Comments__c</fullName>
        <inlineHelpText>Additional information provided by partner registering for deal</inlineHelpText>
        <label>Comments from Submitter to HP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Campaign object</description>
        <label>Program</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Deal Registrations</relationshipLabel>
        <relationshipName>Deal_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Comments from HP to Submitter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>11 - Registration is closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Duplicate registration request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Opportunity already managed by HP Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 - Opportunity is already in HP Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 - Opportunity already approved with another HP partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 - Opportunity does not meet criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - Partner is not authorized to sell the specific product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 - Partner value add could not be verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41 - Customer is ineligible for specific program benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42 - Customer information could not be verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43 - Customer is on HP Direct Listed Account list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43 - Customer is an existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - Selected products are not eligible for program benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 - Deal does not meet threshold requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 - Rejected based on End User Account Manager feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Additional Detail / Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Verified_Account__c</fullName>
        <formula>Customer_Account__r.Verified_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDCP Subscribed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XX_Temp_For_WF_Update__c</fullName>
        <description>This is a temporary custom field which is used as part of temporary workflow(Deal Registration Expiration Temporary) rule criteria to update the &apos;Status&apos; to &apos;Expired&apos; of the existing deal_reg records and this field is valid till 7th, August,2013 after which it will be deleted along with the temporary workflow.</description>
        <label>XX_Temp_For_WF_Update</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Deal Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Submission_Date__c</columns>
        <columns>Partner_Account_Formula__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Program__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Partner_User_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Registrations</fullName>
        <columns>NAME</columns>
        <columns>Submission_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Program__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Partner_Account_Formula__c</columns>
        <columns>Partner_User_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Expired</value>
        </filters>
        <label>All Active Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deals_Expiring_in_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Partner_Account_Formula__c</columns>
        <columns>Partner_User_Location__c</columns>
        <columns>Program__c</columns>
        <columns>Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Deals Expiring in 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deals_Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Verified_Account__c</columns>
        <columns>Partner_Account_Formula__c</columns>
        <columns>Partner_User_Location__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Level_1_Approval_Owner__c</columns>
        <columns>Program__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Review Initiated</value>
        </filters>
        <label>Deals Pending Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deal Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Deal_Reg_Auto_Approve_DeadLine_check</fullName>
        <active>true</active>
        <description>This validation fires when a L1 approver checks Final Approval flag and enters values in L1 Approval Dead line date field</description>
        <errorConditionFormula>IF(($Setup.Global_Config__c.Mute_Validation_Rule__c==true) , False,
        IF(AND (Final_Approver__c  =  true,   NOT(ISNULL(Level_2_Approval_Deadline__c) ))  ,                        true, false)
)</errorConditionFormula>
        <errorMessage>Both Final Approver and Level 2 Approval Deadline cannot be entered. Choose only one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Required_For_Product_Registration</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
(Product_Registrations_Count__c  &lt;&gt; 0),
( ISPICKVAL(Status__c,&quot;Submitted&quot;))
)</errorConditionFormula>
        <errorMessage>Please Approve/Reject Product Registrations To Continue</errorMessage>
    </validationRules>
</CustomObject>